# deckgl-marimo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: hexagon_example.py
examples/__marimo__/session/: hexagon_example.py.json
src/deckgl_marimo/: __init__.py  _data.py  widget.css  widget.js  widget.py
tests/: test_data.py  test_widget.py
