[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckgl-marimo"
version = "0.1.0"
description = "deck.gl HexagonLayer widget for marimo notebooks via anywidget"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
    "narwhals>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "marimo",
    "pandas",
    "polars",
    "pytest",
]
